--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
             <h2>Portfolio</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <img src="project1.jpg" alt="Project 1">
+                    <img src="project1.jpg" alt="Calculator">
                     <h3>Project Title 1</h3>
                 </div>
                 <div class="portfolio-item">
-                    <img src="project2.jpg" alt="Project 2">
+                    <img src="project2.jpg" alt="Student Information System">
                     <h3>Project Title 2</h3>
                 </div>
                 <div class="portfolio-item">
-                    <img src="project3.jpg" alt="Project 3">
+                    <img src="project3.jpg" alt="Rockstar Website">
                     <h3>Project Title 3</h3>
                 </div>
             </div>
