--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section id="about" class="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>Welcome! I'm Jared, a passionate designer and developer with expertise in creating elegant, functional websites. My work reflects a blend of creativity and technical precision.</p>
+            <p>Welcome! Ako si Jared</p>
         </div>
     </section>
     <section id="portfolio" class="portfolio">
