--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
             <div class="portfolio-grid">
                 <div class="portfolio-item">
                     <img src="project1.jpg" alt="Calculator">
-                    <h3>Project Title 1</h3>
+                    <h3>Calculator</h3>
                 </div>
                 <div class="portfolio-item">
                     <img src="project2.jpg" alt="Student Information System">
-                    <h3>Project Title 2</h3>
+                    <h3>Student Information System</h3>
                 </div>
                 <div class="portfolio-item">
                     <img src="project3.jpg" alt="Rockstar Website">
-                    <h3>Project Title 3</h3>
+                    <h3>Rockstar Website</h3>
                 </div>
             </div>
         </div>
