--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="portfolio-item">
                     <img src="project3.jpg" alt="Rockstar Website">
-                    <h3>Rockstar Website</h3>
+                    <h3>Rockstar</h3>
                 </div>
             </div>
         </div>
