--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
             <h2>Portfolio</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <img src="project1.jpg" alt="Calculator">
-                    <h3>Calculator</h3>
+                    <a href="https://github.com/BlackKaiser1121/Student-Management-System" target="_blank">
+                        <img src="login.png" alt="">
+                        <h3>Student Management System</h3>
+                    </a>
                 </div>
                 <div class="portfolio-item">
                     <img src="project2.jpg" alt="Student Information System">
