--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="portfolio-grid">
                 <div class="portfolio-item">
                     <a href="https://github.com/BlackKaiser1121/Student-Management-System" target="_blank">
-                        <img src="login.png" alt="">
+                        <img src="F:\Project Pictures\login.png" alt="">
                         <h3>Student Management System</h3>
                     </a>
                 </div>
