--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
                     </a>
                 </div>
                 <div class="portfolio-item">
-                    <img src="project2.jpg" alt="Student Information System">
-                    <h3>Student Information System</h3>
+                    <a href="https://github.com/BlackKaiser1121/Calculator" target="_blank">
+                        <img src="F:\Project Pictures\Calculator.png" alt="Student Information System">
+                        <h3>Calculator</h3>
+                    </a>
                 </div>
                 <div class="portfolio-item">
                     <img src="project3.jpg" alt="Rockstar Website">
