--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             <div class="portfolio-grid">
                 <div class="portfolio-item">
                     <a href="https://github.com/BlackKaiser1121/Student-Management-System" target="_blank">
-                        <img src="F:\Project Pictures\login.png" alt="">
+                        <img src="login.png" alt="">
                         <h3>Student Management System</h3>
                     </a>
                 </div>
                 <div class="portfolio-item">
                     <a href="https://github.com/BlackKaiser1121/Calculator" target="_blank">
-                        <img src="F:\Project Pictures\Calculator.png" alt="Student Information System">
+                        <img src="Calculator.png" alt="Student Information System">
                         <h3>Calculator</h3>
                     </a>
                 </div>
