--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="portfolio-item">
                     <a href="https://github.com/BlackKaiser1121/Calculator" target="_blank">
-                        <img src="Calculator.png" alt="Student Information System">
+                        <img src="Calculator.png" alt="">
                         <h3>Calculator</h3>
                     </a>
                 </div>
