--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </a>
                 </div>
                 <div class="portfolio-item">
-                    <img src="project3.jpg" alt="Rockstar Website">
+                    <img src="project3.jpg" alt="Rockstar">
                     <h3>Rockstar Website</h3>
                 </div>
             </div>
